--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@storybook/addon-links": "^6.3.4",
     "@storybook/node-logger": "^6.3.4",
     "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.4"
+    "@storybook/react": "^6.3.4",
+    "prop-types": "^15.7.2"
   }
 }
